[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/main_menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/GravityBold8.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://theme/Main.tres" type="Theme" id=3]
[ext_resource path="res://scenes/options_screen/OptionsScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/crt_layer/CRTLayer.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="MenuContainer" type="VBoxContainer" parent="."]
margin_left = 156.0
margin_top = 50.0
margin_right = 644.0
margin_bottom = 450.0
size_flags_horizontal = 4
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer"]
margin_right = 488.0
margin_bottom = 204.0
custom_constants/margin_right = 0
custom_constants/margin_top = 50
custom_constants/margin_left = 0
custom_constants/margin_bottom = 50

[node name="TitlePanel" type="PanelContainer" parent="MenuContainer/MarginContainer"]
margin_top = 50.0
margin_right = 488.0
margin_bottom = 154.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer/MarginContainer/TitlePanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 478.0
margin_bottom = 94.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Title" type="Label" parent="MenuContainer/MarginContainer/TitlePanel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 458.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "PongLike"
align = 1
valign = 1

[node name="Play1PButton" type="Button" parent="MenuContainer"]
margin_left = 150.0
margin_top = 224.0
margin_right = 338.0
margin_bottom = 256.0
focus_neighbour_top = NodePath("../OptionsButton")
size_flags_horizontal = 4
theme = ExtResource( 3 )
text = "Play 1P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play2PButton" type="Button" parent="MenuContainer"]
margin_left = 150.0
margin_top = 276.0
margin_right = 338.0
margin_bottom = 308.0
size_flags_horizontal = 4
theme = ExtResource( 3 )
text = "Play 2P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="MenuContainer"]
margin_left = 142.0
margin_top = 328.0
margin_right = 346.0
margin_bottom = 360.0
focus_neighbour_bottom = NodePath("../Play1PButton")
size_flags_horizontal = 4
theme = ExtResource( 3 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsScreen" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0

[node name="CRTLayer" parent="." instance=ExtResource( 6 )]
[connection signal="focus_entered" from="MenuContainer/Play1PButton" to="." method="_on_Button_focus_entered"]
[connection signal="mouse_entered" from="MenuContainer/Play1PButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="MenuContainer/Play1PButton" to="." method="_on_Play1PButton_pressed"]
[connection signal="focus_entered" from="MenuContainer/Play2PButton" to="." method="_on_Button_focus_entered"]
[connection signal="mouse_entered" from="MenuContainer/Play2PButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="MenuContainer/Play2PButton" to="." method="_on_Play2PButton_pressed"]
[connection signal="focus_entered" from="MenuContainer/OptionsButton" to="." method="_on_Button_focus_entered"]
[connection signal="mouse_entered" from="MenuContainer/OptionsButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="MenuContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="back_pressed" from="OptionsScreen" to="." method="_on_OptionsScreen_back_pressed"]
